--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+html {
+  background-color: #E9D5DA;
+}
+
 .App {
   text-align: center;
 }
@@ -35,4 +39,17 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.landing {
+  background: url("./landing.jpg") no-repeat center 80% / cover;
+  height: 100vh;
+}
+
+.page{
+  background-color: #E9D5DA;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
